# fastregex

./: .gitignore  README.md  build.ps1  build.sh  pom.xml
.github/workflows/: build.yml
java/me/naimad/fastregex/: Demo.java  FastRegex.java  FastRegexLoader.java  NativeLibLoader.java  TestLoad.java
rust/: Cargo.toml
rust/src/: lib.rs
