[package]
name = "fastregex"
version = "0.1.0"
edition = "2021"

[lib]
name = "fastregex"
crate-type = ["cdylib"]

[[bin]]
name = "fastregex-cli"
path = "src/main.rs"

[dependencies]
regex = "1.12.3"
jni = "0.21"
once_cell = "1"
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12"
slab = "0.4"